--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: 'Fantasy';
-    src: url('Antique Quest St.ttf')  format('truetype');
-}
-
 body {
     margin: 0;
     padding: 0;
@@ -13,7 +8,7 @@ body {
     position: fixed;
     height: 100%;
     width: 100%;
-    background: url('./img/background.jpg');
+    background: url('./assets/background.jpg');
     background-size: cover;
 }
 
@@ -24,12 +19,14 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     height: 600px;
-    width: 1069px;
-    background-color: #f5aa42;
+    width: 950px;
+    background: url('./assets/book.png');
+    background-size: cover;
 }
 
 .title {
-    font-size: 50px;
+    padding-top: 20px;
+    font-size: 40px;
     text-align: center;
 }
   
@@ -44,7 +41,7 @@ body {
 .perspective-on {
 -webkit-perspective: 1000px;
     -moz-perspective: 1000px;
-        perspective: 1000px;    /* Setting the perspective of the contents of the stage but not the stage itself*/
+        perspective: 1000px; /* Setting the perspective of the contents of the stage but not the stage itself*/
 }
 .perspective-off {
 -webkit-perspective: 0;
